--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="top-container">
     <img class="top-cloud" src="Media/cloud.png" alt="Cloud-img">
    <div class="title-text">
-      <h1>I'm Folorunsho</h1>
-      <h2 class="first-p">a consultant, designer, joker and programmer.</h2>
+      <h1>I'm Lateef</h1>
+      <h2 class="first-p">a consultant, designer, and programmer.</h2>
    </div>
   <img class="bottom-cloud" src="Media/cloud.png" alt="Cloud-img">
       <img src="Media/mountain.png" alt="Mountain-img">
