--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Folorunsho</title>
+    <title>Abdul-Lateef Sidi-Ali</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Media/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@500&family=Sacramento&display=swap" rel="stylesheet">
