--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Abdul-Lateef Sidi-Ali</title>
+    <title>Folorunsho</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="Media/favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@500&family=Sacramento&display=swap" rel="stylesheet">
@@ -12,8 +12,8 @@
 <div class="top-container">
     <img class="top-cloud" src="Media/cloud.png" alt="Cloud-img">
    <div class="title-text">
-      <h1>I'm Lateef</h1>
-      <h2 class="first-p">a consultant, designer, and programmer.</h2>
+      <h1>I'm Folorunsho</h1>
+      <h2 class="first-p">a consultant, designer, joker and programmer.</h2>
    </div>
   <img class="bottom-cloud" src="Media/cloud.png" alt="Cloud-img">
       <img src="Media/mountain.png" alt="Mountain-img">
@@ -43,16 +43,16 @@
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you're passionate about growth as much as I am, I'd suggest you reach out so we can connect.</h3>
-      <p>There's a saying about people recognizing their type. If your goals align with mine, this could be the beginning of a long and fulfilling journey. Hit me!</p>
+      <p class="contact-message">There's a saying about people recognizing their type. If your goals align with mine, this could be the beginning of a long and fulfilling journey. Hit me!</p>
       <a class="btn" href="mailto:sidiali0203@gmail.com">CONTACT ME</a>
     </div><br>
     <br>
   </div>
 
   <div class="bottom-container">
-  <a class="footer-link" href="https://linkedin.com/in/abdul-lateef-sidi-ali-180b41155">LinkedIn</a>
-  <a class="footer-link" href="https://twitter.com/lateeftheshyboy">Twitter</a>
-  <a class="footer-link" href="https://wa.link/gtfexz">WhatsApp</a>
+  <a class="footer-link" href="https://linkedin.com/in/abdul-lateef-sidi-ali-180b41155"><img class="linkedin" src="Media/linked.png" alt=""></a>
+  <a class="footer-link" href="https://twitter.com/lateeftheshyboy"><img class="twitter" src= "Media/twits.png" alt=""></a>
+  <a class="footer-link" href="https://wa.link/gtfexz"><img class="whatsapp" src="Media/whats.png" alt=""></a>
   <p class="end">© 2021 Abdul-Lateef Folorunsho Sidi-Ali.</p>
 </div>
 
